// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`util > route routeComparator should prioritize OTP1 routes with valid sortOrder 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "Around town",
    "mode": "BUS",
    "shortName": "20",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": -999,
    "type": 3,
  },
]
`;

exports[`util > route routeComparator should prioritize OTP2 routes with valid sortOrder 1`] = `
[
  {
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
  {
    "longName": "Across town",
    "mode": "BUS",
    "shortName": "10",
    "sortOrder": 10,
  },
  {
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": null,
    "type": 3,
  },
]
`;

exports[`util > route routeComparator should prioritize routes with alphabetic shortNames over integer shortNames 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "A-line",
    "mode": "BUS",
    "shortName": "A",
    "sortOrder": -999,
  },
  {
    "agencyId": "bcd",
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
]
`;

exports[`util > route routeComparator should prioritize routes with shortNames over those with just longNames 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "B-line",
    "mode": "BUS",
    "shortName": "B",
    "sortOrder": -999,
  },
  {
    "agencyId": "bcd",
    "longName": "A meandering route",
    "mode": "BUS",
    "sortOrder": -999,
  },
]
`;

exports[`util > route routeComparator should sort OTP1 routes on all of the criteria at once 1`] = `
[
  {
    "agencyId": "abc",
    "agencyName": "Acclaimed agency 1",
    "longName": "Express route X",
    "mode": "BUS",
    "routeId": "2:erx",
    "shortName": "30X",
    "sortOrder": 10,
  },
  {
    "agencyId": "abc",
    "agencyName": "Agency 1",
    "longName": "Intercity Train 2",
    "mode": "RAIL",
    "routeId": "1:it2",
    "shortName": "IC",
    "sortOrder": 10,
  },
  {
    "agencyId": "bcd",
    "longName": "Yellow line Subway",
    "mode": "SUBWAY",
    "shortName": "Yellow",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Intercity Train",
    "mode": "RAIL",
    "shortName": "IC",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Local route",
    "mode": "BUS",
    "shortName": "6",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Around town",
    "mode": "BUS",
    "shortName": "20",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Variation of express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Zig-zagging route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Xpress route C",
    "mode": "BUS",
    "shortName": "30C",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Across town",
    "mode": "BUS",
    "shortName": "10",
    "sortOrder": 10,
  },
  {
    "agencyId": "bcd",
    "longName": "A-line",
    "mode": "BUS",
    "shortName": "A",
    "sortOrder": -999,
  },
  {
    "agencyId": "bcd",
    "longName": "B-line",
    "mode": "BUS",
    "shortName": "B",
    "sortOrder": -999,
  },
  {
    "agencyId": "bcd",
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
  {
    "agencyId": "bcd",
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": -999,
    "type": 3,
  },
  {
    "agencyId": "bcd",
    "longName": "Express route X",
    "mode": "BUS",
    "shortName": "30X",
  },
  {
    "agencyId": "bcd",
    "longName": "A meandering route",
    "mode": "BUS",
    "sortOrder": -999,
  },
]
`;

exports[`util > route routeComparator should sort OTP2 routes on all of the criteria at once 1`] = `
[
  {
    "agency": {
      "id": "abc",
      "name": "Acclaimed agency 1",
    },
    "longName": "Express route X",
    "mode": "BUS",
    "routeId": "2:erx",
    "shortName": "30X",
    "sortOrder": 2,
  },
  {
    "agency": {
      "id": "abc",
      "name": "Agency 1",
    },
    "longName": "Intercity Train 2",
    "mode": "RAIL",
    "routeId": "1:it2",
    "shortName": "IC",
    "sortOrder": 2,
  },
  {
    "longName": "A-line",
    "mode": "BUS",
    "shortName": "A",
    "sortOrder": -999,
  },
  {
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
  {
    "longName": "Yellow line Subway",
    "mode": "SUBWAY",
    "shortName": "Yellow",
    "sortOrder": 2,
  },
  {
    "longName": "Intercity Train",
    "mode": "RAIL",
    "shortName": "IC",
    "sortOrder": 2,
  },
  {
    "longName": "Local route",
    "mode": "BUS",
    "shortName": "6",
    "sortOrder": 2,
  },
  {
    "longName": "Around town",
    "mode": "BUS",
    "shortName": "20",
    "sortOrder": 2,
  },
  {
    "longName": "Express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  {
    "longName": "Variation of express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  {
    "longName": "Zig-zagging route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  {
    "longName": "Xpress route C",
    "mode": "BUS",
    "shortName": "30C",
    "sortOrder": 2,
  },
  {
    "longName": "Express route X",
    "mode": "BUS",
    "shortName": "30X",
    "sortOrder": 2,
  },
  {
    "longName": "Across town",
    "mode": "BUS",
    "shortName": "10",
    "sortOrder": 10,
  },
  {
    "longName": "B-line",
    "mode": "BUS",
    "shortName": "B",
  },
  {
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": null,
    "type": 3,
  },
  {
    "longName": "A meandering route",
    "mode": "BUS",
  },
]
`;

exports[`util > route routeComparator should sort based off of route type 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "Yellow line Subway",
    "mode": "SUBWAY",
    "shortName": "Yellow",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Intercity Train",
    "mode": "RAIL",
    "shortName": "IC",
    "sortOrder": 2,
  },
]
`;

exports[`util > route routeComparator should sort routes based off of agencyName if no transitOperators are defined 1`] = `
[
  {
    "agencyId": "abc",
    "agencyName": "Acclaimed agency 1",
    "longName": "Express route X",
    "mode": "BUS",
    "routeId": "2:erx",
    "shortName": "30X",
    "sortOrder": 10,
  },
  {
    "agencyId": "abc",
    "agencyName": "Agency 1",
    "longName": "Intercity Train 2",
    "mode": "RAIL",
    "routeId": "1:it2",
    "shortName": "IC",
    "sortOrder": 10,
  },
]
`;

exports[`util > route routeComparator should sort routes based off of integer shortName 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "Loop route",
    "mode": "BUS",
    "shortName": "2",
    "sortOrder": -999,
  },
  {
    "agencyId": "bcd",
    "longName": "Around another town",
    "shortName": "3",
    "sortOrder": -999,
    "type": 3,
  },
]
`;

exports[`util > route routeComparator should sort routes based off of longNames 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "Express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Variation of express route",
    "mode": "BUS",
    "shortName": "30",
    "sortOrder": 2,
  },
]
`;

exports[`util > route routeComparator should sort routes based off of shortNames 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "A-line",
    "mode": "BUS",
    "shortName": "A",
    "sortOrder": -999,
  },
  {
    "agencyId": "bcd",
    "longName": "B-line",
    "mode": "BUS",
    "shortName": "B",
    "sortOrder": -999,
  },
]
`;

exports[`util > route routeComparator should sort routes based off of sortOrder 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "Around town",
    "mode": "BUS",
    "shortName": "20",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Across town",
    "mode": "BUS",
    "shortName": "10",
    "sortOrder": 10,
  },
]
`;

exports[`util > route routeComparator should sort routes based off of transitOperators sort value when a match is found 1`] = `
[
  {
    "agencyId": "abc",
    "agencyName": "Agency 1",
    "longName": "Intercity Train 2",
    "mode": "RAIL",
    "routeId": "1:it2",
    "shortName": "IC",
    "sortOrder": 10,
  },
  {
    "agencyId": "abc",
    "agencyName": "Acclaimed agency 1",
    "longName": "Express route X",
    "mode": "BUS",
    "routeId": "2:erx",
    "shortName": "30X",
    "sortOrder": 10,
  },
]
`;

exports[`util > route routeComparator should sort routes with alphanumeric shortNames 1`] = `
[
  {
    "agencyId": "bcd",
    "longName": "Xpress route C",
    "mode": "BUS",
    "shortName": "30C",
    "sortOrder": 2,
  },
  {
    "agencyId": "bcd",
    "longName": "Express route X",
    "mode": "BUS",
    "shortName": "30X",
  },
]
`;
